[package]
name = "pid1"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "", features = ["unstable"]}
async-attributes = ""
libc = ""
signal-hook = ""
